Added new files

--- a/ex01/src/index.html
+++ b/ex01/src/index.html
@@ -7,7 +7,7 @@
     <body>
         <h2 class="title">Virtual Keyboard</h2>
         <div class="container">
-                <textarea id="textarea"></textarea>
+                <textarea name="" id="textarea" cols="90" rows="10" placeholder="TEXT AREA"></textarea>
             <div class="keyboard">
                 <div class="row">
                     <button class="character" value="1">1</button>
