Added new files

--- a/ex01/src/index.html
+++ b/ex01/src/index.html
@@ -20,7 +20,7 @@
                     <button class="character" value="8">8</button>
                     <button class="character" value="9">9</button>
                     <button class="character" value="0">0</button>
-                    <button class="backspace" value="backSpace">Back Space</button>
+                    <button class="backSpace character" value="backSpace">Back Space</button>
                 </div>
                 <div class="row">
                     <button class="character" value="q">q</button>
@@ -33,7 +33,7 @@
                     <button class="character" value="i">i</button>
                     <button class="character" value="o">o</button>
                     <button class="character" value="p">p</button>
-                    <button class="capslock" value="capsLock">Caps Lock</button>
+                    <button class="capsLock character" value="capsLock">Caps Lock</button>
 
                 </div>
                 <div class="row">
@@ -46,7 +46,7 @@
                     <button class="character" value="j">j</button>
                     <button class="character" value="k">k</button>
                     <button class="character" value="l">l</button>
-                    <button class="enter" value="enter">Enter</button>
+                    <button class="enter character" value="enter">Enter</button>
                 </div>
                 <div class="row">
                     <button class="character" value="z">z</button>
@@ -58,11 +58,11 @@
                     <button class="character" value="m">m</button>
                     <button class="character" value="-">-</button>
                     <button class="character" value="_">_</button>
-                    <button class="shift" value="shift" id="shift">Shift</button>
+                    <button class="shift character" value="shift" id="shift">Shift</button>
                 </div>
                 <div class="row">
-                    <button class="space" value="space">Space</button>
-                    <button class="ok" id="ok" type="submit">OK</button>
+                    <button class="space character" value="space">Space</button>
+                    <button class="ok character" id="ok" type="submit">OK</button>
                 </div>
             </div>
         </div>
